# i18n-to-ngx

./: .gitignore  README.md  output.html  pyproject.toml
src/: __init__.py  convert.py
