[tool.poetry]
name = "i18n-to-ngx"
packages = [
    {include = "src"}
]
version = "0.1.0"
description = ""
authors = ["mathias <mathias@us2.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
googletrans = "4.0.0-rc1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
convert = "src:main"